# saife-sha-fingerprint

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/saife_sha_fingerprint/: cli.py  core.py
tests/: test_basic.py
