[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saife-sha-fingerprint"
version = "0.1.0"
description = "Immutable, auditor-grade SHA-256 receipts — Saife Labs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Saife Labs", email = "security@saifecs.com"}]
keywords = ["cryptography", "integrity", "audit", "security", "compliance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security :: Cryptography",
    "Development Status :: 4 - Beta"
]

[project.urls]
Homepage = "https://saifecs.com"
Repository = "https://github.com/skolleigen/saife-sha-fingerprint"

[project.scripts]
saife-sha-fingerprint = "saife_sha_fingerprint.cli:main"




